// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diplay chapter How to cite 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-33"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-33"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus"
              >
                Corpus
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L"
              >
                L
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L/1/1"
              >
                I.1 Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Chapter Old Babylonian The Only Chapter
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
          <br />
          <small>
            Chapter
             
            The Only Chapter
             
            <span>
              <span>
                Pofo jarikat vowhukod voawka pigiz jato milatas sik desit ronvojjiw ga muvcaeni ke.
              </span>
            </span>
          </small>
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        >
          <div
            class="btn-group"
            role="group"
          >
            <div
              class="dropdown btn-group"
              role="group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-outline-primary"
                type="button"
              >
                Go to
              </button>
            </div>
            <a
              class="btn btn-outline-primary"
              href="/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter/edit"
            >
              <i
                class="fas fa-edit"
              />
               Edit
            </a>
          </div>
        </div>
      </header>
      <section
        class="chapter-view__section"
      >
        <h3
          aria-controls="collapse-38"
          class="chapter-view__section-heading collapsible_section__heading"
        >
          How to cite
           
          <i
            aria-expanded="false"
            class="collapsible_section__collapse-indicator fas fa-caret-right"
          />
        </h3>
        <div
          class="collapse"
          id="collapse-38"
        >
          <div
            class="csl-bib-body"
          >
            
  
            <div
              class="csl-entry"
              data-csl-entry-id="L 1 1 Old Babylonian The Only Chapter"
            >
              Test, A. (2020). Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh. Chapter The Only Chapter. 
              <i>
                Electronic Babylonian Literature
              </i>
              . https://www.ebl.lmu.de/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter
            </div>
            

          </div>
          <div
            class="justify-content-center mt-3 btn-toolbar"
            role="toolbar"
          >
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
          </div>
        </div>
      </section>
      <section>
        <h3>
          Edition
        </h3>
        <table
          class="chapter-display"
        >
          <tbody>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Na pur gi tufse lero hel patedofo hiusiwal otlucvi fac vokifel umihineni mi gepzor puji famih.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line chapter-display__line--is-second-line-of-parallelism chapter-display__line--is-beginning-of-section"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-35"
                  aria-expanded="false"
                  class="fas fa-caret-right"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Weg bocuvaor fite vanupu zopab sun rofu wapzelaf uc uhoev ficdogpih wujfoj komtedzi ver.
                  </span>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Zenkitu kuklot lohid etoek geezu ve diluwgar ki zopvonfe beb ki alpemhi cucvugkez cir ujbi ude.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-36"
                  aria-expanded="false"
                  class="fas fa-caret-right"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Wijada pacopavi lepoaze ahawa ezis nofa ihelvok imaesu zu paduis zocuzmev oc.
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
    <aside
      class="main__sidebar"
    >
      <section
        class="settings"
      >
        <h3
          aria-controls="settings-37"
          aria-expanded="false"
          class="settings__heading"
          role="button"
        >
          <i
            class="fas fa-cog"
          />
           Settings
        </h3>
      </section>
    </aside>
  </main>
</div>
`;

exports[`Diplay chapter Show manuscripts 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-11"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-11"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus"
              >
                Corpus
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L"
              >
                L
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L/1/1"
              >
                I.1 Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Chapter Old Babylonian The Only Chapter
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
          <br />
          <small>
            Chapter
             
            The Only Chapter
             
            <span>
              <span>
                Pofo jarikat vowhukod voawka pigiz jato milatas sik desit ronvojjiw ga muvcaeni ke.
              </span>
            </span>
          </small>
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        >
          <div
            class="btn-group"
            role="group"
          >
            <div
              class="dropdown btn-group"
              role="group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-outline-primary"
                type="button"
              >
                Go to
              </button>
            </div>
            <a
              class="btn btn-outline-primary"
              href="/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter/edit"
            >
              <i
                class="fas fa-edit"
              />
               Edit
            </a>
          </div>
        </div>
      </header>
      <section
        class="chapter-view__section"
      >
        <h3
          aria-controls="collapse-16"
          class="chapter-view__section-heading collapsible_section__heading"
        >
          How to cite
           
          <i
            aria-expanded="true"
            class="collapsible_section__collapse-indicator fas fa-caret-down"
          />
        </h3>
        <div
          class="collapse show"
          id="collapse-16"
        >
          <div
            class="csl-bib-body"
          >
            
  
            <div
              class="csl-entry"
              data-csl-entry-id="L 1 1 Old Babylonian The Only Chapter"
            >
              Test, A. (2020). Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh. Chapter The Only Chapter. 
              <i>
                Electronic Babylonian Literature
              </i>
              . https://www.ebl.lmu.de/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter
            </div>
            

          </div>
          <div
            class="justify-content-center mt-3 btn-toolbar"
            role="toolbar"
          >
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
          </div>
        </div>
      </section>
      <section>
        <h3>
          Edition
        </h3>
        <table
          class="chapter-display"
        >
          <tbody>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Na pur gi tufse lero hel patedofo hiusiwal otlucvi fac vokifel umihineni mi gepzor puji famih.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line chapter-display__line--is-second-line-of-parallelism chapter-display__line--is-beginning-of-section"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-17"
                  aria-expanded="true"
                  class="fas fa-caret-down"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Weg bocuvaor fite vanupu zopab sun rofu wapzelaf uc uhoev ficdogpih wujfoj komtedzi ver.
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="collapse show"
              id="score-17"
              style=""
            >
              <td
                colspan="5"
              >
                <table
                  class="chapter-display__manuscripts"
                >
                  <tbody>
                    <tr
                      class="chapter-display__manuscript chapter-display__manuscript--standard"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          Std1
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          o
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__LoneDeterminative Transliteration__LoneDeterminative--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__UnknownNumberOfSigns Transliteration__UnknownNumberOfSigns--AKKADIAN"
                        >
                          …
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        >
                          (single ruling)
                        </span>
                      </td>
                      <td />
                    </tr>
                    <tr
                      class="chapter-display__manuscript"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          NipUr3Sch1
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                        </span>
                      </td>
                      <td
                        colspan="1"
                      />
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        />
                      </td>
                      <td />
                    </tr>
                    <tr
                      class="chapter-display__manuscript"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          // 
                          NipUr3Par1
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__LoneDeterminative Transliteration__LoneDeterminative--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__UnknownNumberOfSigns Transliteration__UnknownNumberOfSigns--AKKADIAN"
                        >
                          …
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        />
                      </td>
                      <td />
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Zenkitu kuklot lohid etoek geezu ve diluwgar ki zopvonfe beb ki alpemhi cucvugkez cir ujbi ude.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-14"
                  aria-expanded="false"
                  class="fas fa-caret-right"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Wijada pacopavi lepoaze ahawa ezis nofa ihelvok imaesu zu paduis zocuzmev oc.
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
    <aside
      class="main__sidebar"
    >
      <section
        class="settings"
      >
        <h3
          aria-controls="settings-18"
          aria-expanded="false"
          class="settings__heading"
          role="button"
        >
          <i
            class="fas fa-cog"
          />
           Settings
        </h3>
      </section>
    </aside>
  </main>
</div>
`;

exports[`Diplay chapter Sidebar 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-19"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-19"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus"
              >
                Corpus
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L"
              >
                L
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L/1/1"
              >
                I.1 Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Chapter Old Babylonian The Only Chapter
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
          <br />
          <small>
            Chapter
             
            The Only Chapter
             
            <span>
              <span>
                Pofo jarikat vowhukod voawka pigiz jato milatas sik desit ronvojjiw ga muvcaeni ke.
              </span>
            </span>
          </small>
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        >
          <div
            class="btn-group"
            role="group"
          >
            <div
              class="dropdown btn-group"
              role="group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-outline-primary"
                type="button"
              >
                Go to
              </button>
            </div>
            <a
              class="btn btn-outline-primary"
              href="/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter/edit"
            >
              <i
                class="fas fa-edit"
              />
               Edit
            </a>
          </div>
        </div>
      </header>
      <section
        class="chapter-view__section"
      >
        <h3
          aria-controls="collapse-26"
          class="chapter-view__section-heading collapsible_section__heading"
        >
          How to cite
           
          <i
            aria-expanded="true"
            class="collapsible_section__collapse-indicator fas fa-caret-down"
          />
        </h3>
        <div
          class="collapse show"
          id="collapse-26"
        >
          <div
            class="csl-bib-body"
          >
            
  
            <div
              class="csl-entry"
              data-csl-entry-id="L 1 1 Old Babylonian The Only Chapter"
            >
              Test, A. (2020). Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh. Chapter The Only Chapter. 
              <i>
                Electronic Babylonian Literature
              </i>
              . https://www.ebl.lmu.de/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter
            </div>
            

          </div>
          <div
            class="justify-content-center mt-3 btn-toolbar"
            role="toolbar"
          >
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
          </div>
        </div>
      </section>
      <section>
        <h3>
          Edition
        </h3>
        <table
          class="chapter-display"
        >
          <tbody>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Na pur gi tufse lero hel patedofo hiusiwal otlucvi fac vokifel umihineni mi gepzor puji famih.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line chapter-display__line--is-second-line-of-parallelism chapter-display__line--is-beginning-of-section"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-27"
                  aria-expanded="true"
                  class="fas fa-caret-down"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Weg bocuvaor fite vanupu zopab sun rofu wapzelaf uc uhoev ficdogpih wujfoj komtedzi ver.
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="collapse show"
              id="score-27"
              style=""
            >
              <td
                colspan="5"
              >
                <table
                  class="chapter-display__manuscripts"
                >
                  <tbody>
                    <tr
                      class="chapter-display__manuscript chapter-display__manuscript--standard"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          Std
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__LoneDeterminative Transliteration__LoneDeterminative--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__UnknownNumberOfSigns Transliteration__UnknownNumberOfSigns--AKKADIAN"
                        >
                          …
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        >
                          (single ruling)
                        </span>
                      </td>
                      <td />
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Zenkitu kuklot lohid etoek geezu ve diluwgar ki zopvonfe beb ki alpemhi cucvugkez cir ujbi ude.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-28"
                  aria-expanded="true"
                  class="fas fa-caret-down"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Wijada pacopavi lepoaze ahawa ezis nofa ihelvok imaesu zu paduis zocuzmev oc.
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="collapse show"
              id="score-28"
              style=""
            >
              <td
                colspan="5"
              >
                <table
                  class="chapter-display__manuscripts"
                >
                  <tbody>
                    <tr
                      class="chapter-display__manuscript chapter-display__manuscript--standard"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          Std
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        >
                          (single ruling)
                        </span>
                      </td>
                      <td />
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
    <aside
      class="main__sidebar"
    >
      <section
        class="settings"
      >
        <h3
          aria-controls="settings-29"
          aria-expanded="true"
          class="settings__heading"
          role="button"
        >
          <i
            class="fas fa-cog"
          />
           Settings
        </h3>
        <div
          class="fade show"
          id="settings-29"
        >
          <form
            class="settings__section"
          >
            <h4
              class="settings__subheading"
            >
              Text
            </h4>
            <div
              class="settings__switch custom-control custom-switch"
            >
              <input
                class="custom-control-input"
                id="sidebar-text-toggle-30"
                type="checkbox"
              />
              <label
                class="custom-control-label"
                for="sidebar-text-toggle-30"
                title=""
              >
                Score
              </label>
            </div>
          </form>
          <footer
            class="settings__footer"
          >
            <span
              class="settings__close-button"
              role="button"
            >
              <i
                class="far fa-times-circle"
              />
               Close
            </span>
          </footer>
        </div>
      </section>
    </aside>
  </main>
</div>
`;

exports[`Diplay chapter Sidebar 2`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-19"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-19"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus"
              >
                Corpus
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L"
              >
                L
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L/1/1"
              >
                I.1 Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Chapter Old Babylonian The Only Chapter
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
          <br />
          <small>
            Chapter
             
            The Only Chapter
             
            <span>
              <span>
                Pofo jarikat vowhukod voawka pigiz jato milatas sik desit ronvojjiw ga muvcaeni ke.
              </span>
            </span>
          </small>
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        >
          <div
            class="btn-group"
            role="group"
          >
            <div
              class="dropdown btn-group"
              role="group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-outline-primary"
                type="button"
              >
                Go to
              </button>
            </div>
            <a
              class="btn btn-outline-primary"
              href="/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter/edit"
            >
              <i
                class="fas fa-edit"
              />
               Edit
            </a>
          </div>
        </div>
      </header>
      <section
        class="chapter-view__section"
      >
        <h3
          aria-controls="collapse-26"
          class="chapter-view__section-heading collapsible_section__heading"
        >
          How to cite
           
          <i
            aria-expanded="true"
            class="collapsible_section__collapse-indicator fas fa-caret-down"
          />
        </h3>
        <div
          class="collapse show"
          id="collapse-26"
        >
          <div
            class="csl-bib-body"
          >
            
  
            <div
              class="csl-entry"
              data-csl-entry-id="L 1 1 Old Babylonian The Only Chapter"
            >
              Test, A. (2020). Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh. Chapter The Only Chapter. 
              <i>
                Electronic Babylonian Literature
              </i>
              . https://www.ebl.lmu.de/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter
            </div>
            

          </div>
          <div
            class="justify-content-center mt-3 btn-toolbar"
            role="toolbar"
          >
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
          </div>
        </div>
      </section>
      <section>
        <h3>
          Edition
        </h3>
        <table
          class="chapter-display"
        >
          <tbody>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Na pur gi tufse lero hel patedofo hiusiwal otlucvi fac vokifel umihineni mi gepzor puji famih.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line chapter-display__line--is-second-line-of-parallelism chapter-display__line--is-beginning-of-section"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-27"
                  aria-expanded="true"
                  class="fas fa-caret-down"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Weg bocuvaor fite vanupu zopab sun rofu wapzelaf uc uhoev ficdogpih wujfoj komtedzi ver.
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="collapse show"
              id="score-27"
              style=""
            >
              <td
                colspan="5"
              >
                <table
                  class="chapter-display__manuscripts"
                >
                  <tbody>
                    <tr
                      class="chapter-display__manuscript chapter-display__manuscript--standard"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          Std
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__LoneDeterminative Transliteration__LoneDeterminative--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__UnknownNumberOfSigns Transliteration__UnknownNumberOfSigns--AKKADIAN"
                        >
                          …
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        >
                          (single ruling)
                        </span>
                      </td>
                      <td />
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Zenkitu kuklot lohid etoek geezu ve diluwgar ki zopvonfe beb ki alpemhi cucvugkez cir ujbi ude.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-28"
                  aria-expanded="true"
                  class="fas fa-caret-down"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Wijada pacopavi lepoaze ahawa ezis nofa ihelvok imaesu zu paduis zocuzmev oc.
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="collapse show"
              id="score-28"
              style=""
            >
              <td
                colspan="5"
              >
                <table
                  class="chapter-display__manuscripts"
                >
                  <tbody>
                    <tr
                      class="chapter-display__manuscript chapter-display__manuscript--standard"
                    >
                      <td>
                        <span
                          class="chapter-display__manuscript-siglum"
                        >
                          Std
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-labels"
                        >
                          
                           
                          10.
                        </span>
                      </td>
                      <td
                        colspan="1"
                      >
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                        <span
                          class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                        >
                           
                        </span>
                        <span
                          class="Transliteration__Word Transliteration__Word--AKKADIAN"
                        >
                          <span
                            class=""
                          />
                        </span>
                      </td>
                      <td>
                        <span
                          class="chapter-display__manuscript-paratext"
                        >
                          (single ruling)
                        </span>
                      </td>
                      <td />
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
    <aside
      class="main__sidebar"
    >
      <section
        class="settings"
      >
        <h3
          aria-controls="settings-31"
          aria-expanded="false"
          class="settings__heading"
          role="button"
        >
          <i
            class="fas fa-cog"
          />
           Settings
        </h3>
      </section>
    </aside>
  </main>
</div>
`;

exports[`Diplay chapter Snapshot 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-6"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-6"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus"
              >
                Corpus
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L"
              >
                L
              </a>
            </li>
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/corpus/L/1/1"
              >
                I.1 Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Chapter Old Babylonian The Only Chapter
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh.
          <br />
          <small>
            Chapter
             
            The Only Chapter
             
            <span>
              <span>
                Pofo jarikat vowhukod voawka pigiz jato milatas sik desit ronvojjiw ga muvcaeni ke.
              </span>
            </span>
          </small>
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        >
          <div
            class="btn-group"
            role="group"
          >
            <div
              class="dropdown btn-group"
              role="group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-outline-primary"
                type="button"
              >
                Go to
              </button>
            </div>
            <a
              class="btn btn-outline-primary"
              href="/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter/edit"
            >
              <i
                class="fas fa-edit"
              />
               Edit
            </a>
          </div>
        </div>
      </header>
      <section
        class="chapter-view__section"
      >
        <h3
          aria-controls="collapse-7"
          class="chapter-view__section-heading collapsible_section__heading"
        >
          How to cite
           
          <i
            aria-expanded="true"
            class="collapsible_section__collapse-indicator fas fa-caret-down"
          />
        </h3>
        <div
          class="collapse show"
          id="collapse-7"
        >
          <div
            class="csl-bib-body"
          >
            
  
            <div
              class="csl-entry"
              data-csl-entry-id="L 1 1 Old Babylonian The Only Chapter"
            >
              Test, A. (2020). Lo sikfagdeh ir lino oveagfes bohhi watil te zulreziv weemwin fodiric ipagiiki wugob coh bowko iz owaofoece zuh. Chapter The Only Chapter. 
              <i>
                Electronic Babylonian Literature
              </i>
              . https://www.ebl.lmu.de/corpus/L/1/1/Old%20Babylonian/The%20Only%20Chapter
            </div>
            

          </div>
          <div
            class="justify-content-center mt-3 btn-toolbar"
            role="toolbar"
          >
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
            <div
              class="mr-2 btn-group"
              role="group"
            />
          </div>
        </div>
      </section>
      <section>
        <h3>
          Edition
        </h3>
        <table
          class="chapter-display"
        >
          <tbody>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Na pur gi tufse lero hel patedofo hiusiwal otlucvi fac vokifel umihineni mi gepzor puji famih.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line chapter-display__line--is-second-line-of-parallelism chapter-display__line--is-beginning-of-section"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-8"
                  aria-expanded="false"
                  class="fas fa-caret-right"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                1
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Weg bocuvaor fite vanupu zopab sun rofu wapzelaf uc uhoev ficdogpih wujfoj komtedzi ver.
                  </span>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="chapter-display__intertext"
                colspan="5"
              >
                (
                <span>
                  <span>
                    Zenkitu kuklot lohid etoek geezu ve diluwgar ki zopvonfe beb ki alpemhi cucvugkez cir ujbi ude.
                  </span>
                </span>
                )
              </td>
            </tr>
            <tr
              class="chapter-display__line"
            >
              <td
                class="chapter-display__manuscripts-toggle"
              >
                <i
                  aria-controls="score-9"
                  aria-expanded="false"
                  class="fas fa-caret-right"
                />
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                colspan="1"
              >
                <span
                  class="Transliteration__wordSeparator Transliteration__wordSeparator--AKKADIAN"
                >
                   
                </span>
                <span
                  class="Transliteration__AkkadianWord Transliteration__AkkadianWord--AKKADIAN"
                >
                  <span
                    class=""
                  >
                    <span
                      class="Transliteration__ValueToken"
                    >
                      <span
                        class=""
                      >
                        kur-kur
                      </span>
                    </span>
                    <sup
                      class="Transliteration__flag"
                    />
                  </span>
                </span>
              </td>
              <td
                class="chapter-display__line-number"
              >
                2
              </td>
              <td
                class="chapter-display__translation"
              >
                <div>
                  <span>
                    Wijada pacopavi lepoaze ahawa ezis nofa ihelvok imaesu zu paduis zocuzmev oc.
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </section>
    </div>
    <aside
      class="main__sidebar"
    >
      <section
        class="settings"
      >
        <h3
          aria-controls="settings-10"
          aria-expanded="false"
          class="settings__heading"
          role="button"
        >
          <i
            class="fas fa-cog"
          />
           Settings
        </h3>
      </section>
    </aside>
  </main>
</div>
`;
